--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -1,6 +1,6 @@
 @(user: String, tableName: String)(implicit request: play.api.mvc.RequestHeader)
 @main("spreadsheet!"){
-    @navbar(tableName, user)
+    @partials.navbar(tableName, user)
     <div class="container">
         <div id="table-area" class="card table-card">
             <table></table>
@@ -8,7 +8,7 @@
         <button class="btn3d btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 15px">Load CSV</button>
         <button class="btn3d btn btn-info" id="check-csv-triples" style="margin-top: 15px">Check CSV</button>
     </div>
-    @csvModal()
+    @partials.csvModal()
     <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
