--- a/public/stylesheets/spreadsheet.css
+++ b/public/stylesheets/spreadsheet.css
@@ -137,15 +137,15 @@ tr:first-child td, td:first-child {
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+    /*border-radius: 5px;  5px rounded corners */
+}
+.card:hover {
+    background: #e1e1e1;
+    border-top: 1px solid #d0d0d0;
 }
 
-/* Add rounded corners to the top left and the top right corner of the image */
-img {
-    border-radius: 5px 5px 0 0;
-}
 .btn3d {
     position: relative;
     top: -6px;
