--- a/app/views/partials/csvModal.scala.html
+++ b/app/views/partials/csvModal.scala.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h3 class="modal-title" id="exampleModalLabel">Upload a CSV File</h3>
+                <h3 class="modal-title" id="upload-csv-modal">Upload a CSV File</h3>
             </div>
             <div class="modal-body">
                         Select a file to load:<br>
