--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -10,11 +10,11 @@
     </div>
     @partials.csvModal()
     @partials.conflictModal()
+    @partials.warningModal()
     <script src="@routes.Assets.versioned("javascripts/dynamicTemplates/conflictRes.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.versioned("javascripts/sampleJson.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
 
