--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -5,18 +5,18 @@
         <div id="table-area" class="table-card">
             <table></table>
         </div>
-        <button class="btn3d btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 15px">Load CSV</button>
         <button class="btn3d btn btn-danger" data-toggle="modal" data-target="#resolve-conflicts" style="margin-top: 15px">Resolve Conflicts</button>
         <button class="btn3d btn btn-success" id="save-csv-table" style="margin-top: 15px">Save</button>
     </div>
     @partials.csvModal()
     @partials.conflictModal()
     @partials.warningModal()
+    @partials.errorModal()
     <script src="@routes.Assets.versioned("javascripts/dynamicTemplates/conflictRes.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
-
+    <script src="@routes.Assets.versioned("javascripts/navbar.js")" type="text/javascript"></script>
 }
