--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -26,6 +26,7 @@
         <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/navbar.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/dynamicTemplates/tableSelect.js")" type="text/javascript"></script>
     </div>
 }
