--- a/app/views/partials/warningModal.scala.html
+++ b/app/views/partials/warningModal.scala.html
@@ -5,14 +5,14 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h3 class="modal-title" id="upload-csv-modal">Warning!</h3>
+                <h3 class="modal-title" id="warn-header">Warning!</h3>
             </div>
             <div class="modal-body">
-                <h5 style="color: red; padding-bottom: 10px; margin: 10px">something something something something something something something something something!</h5>
+                <h5 style="color: red; padding-bottom: 10px; margin: 10px" id="warn-message">...</h5>
                 <h5></h5>
-                <div class="modal-footer">
-                    <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal">Go Back</button>
-                    <button type="button" class="btn3d btn btn-danger" data-dismiss="modal" style="margin-top: 0px">Proceed</button>
+                <div class="modal-footer" >
+                    <button id="warn-cancel" type="button" class="btn3d btn btn-primary" data-dismiss="modal">Cancel</button>
+                    <button id="warn-ok" type="button" class="btn3d btn btn-danger" data-dismiss="modal" style="margin-top: 0px">Ok</button>
                 </div>
             </div>
         </div>
