--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -21,6 +21,7 @@
             </div>
         </div>
         @partials.newTableModal()
+        @partials.warningModal()
         <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
