--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -19,4 +19,5 @@
     <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/navbar.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("javascripts/csvhandler.js")" type="text/javascript"></script>
 }
