--- a/app/views/partials/navbar.scala.html
+++ b/app/views/partials/navbar.scala.html
@@ -17,9 +17,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" id="navbar-csv-import">Import CSV</a></li>
+                        <li><a href="#" id="navbar-csv-import">Import CSV Tables</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#" id="navbar-csv-export">Export CSV</a></li>
+                        <li><a href="#" id="navbar-csv-export-single">Export as a CSV </a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#" id="navbar-csv-export-multi">Export Multiple CSVs</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Resolve Conflicts</a></li>
                         <li role="separator" class="divider"></li>
