--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/spreadsheet.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-select/dist/css/bootstrap-select.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/w3.css")">
-        <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/jquery/dist/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/jquery-ui/jquery-ui.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/lodash/lodash.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
