--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,7 +24,7 @@
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/papaparse/papaparse.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/filesaver/filesaver.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/filesaver/FileSaver.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/jszip/jszip.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/bootstrap-select/dist/js/bootstrap-select.js")" type="text/javascript"></script>
     </head>
